feat(inventory): add customer reservations (#18)
